NPG: Fix remaining references to metadata as oops in comments

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: hs25, 9
    • Component/s: hotspot
    • b08


      Also code of the form Method* method_oop = blah; Method* is not an oop anymore.
      There's also a lot of "this_oop" in instanceKlass.cpp and constantPool.cpp.

      The comments in src/share/vm/oops/method.hpp are also wrong. These block comments which show the layout of metadata in the metadata header files are frequently out of date. It might be better not to have them.

      There are also references to permgen in places.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: